<resources>
    <string name="app_name">VascularSurgeryProject</string>
    <string name="menu_button">opens menu</string>
    <string name="logo">app logo</string>
    <string name="user_button">opens userprofile</string>
    <string name="button">Button</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Anatomy">Anatomy</string>
    <string name="Physiology">Physiology</string>
    <string name="Pathophysiology">Pathophysiology</string>
    <string name="Clinical_Reference">Clinical Reference</string>
    <string name="Diagnostics_and_Imaging">Diagnostics and Imaging</string>
    <string name="Rotations_Essentials">Rotations Essentials</string>
    <string name="Aortic_Dissection">Aortic Dissection</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="page_title">PAGE TITLE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>