<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_marginTop="178dp"
    android:layout_marginBottom="100dp"
    android:verticalScrollbarPosition="left"
    android:fadeScrollbars="false"
    android:scrollbarSize="10dp"
    >
    <!--   Needed by ScrollView     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/scrollview_container"
        android:paddingStart="14dp"
        android:paddingEnd="5dp"
        >
        <!--
                Replace buttons here!
                Needed to hardcode just
                to show that scroll works,
                replace as needed :)
        -->
        <Button
            android:id="@+id/Rotations_Essentials"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#AE94E2"
            android:text="@string/Rotations_Essentials"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/Anatomy"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#AE94E2"
            android:text="@string/Anatomy"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/Physiology"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#AE94E2"
            android:text="@string/Physiology"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/Pathophysiology"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#AE94E2"
            android:text="@string/Pathophysiology"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/Clinical_Reference"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#AE94E2"
            android:text="@string/Clinical_Reference"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/Diagnostics_and_Imaging"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#AE94E2"
            android:text="@string/Diagnostics_and_Imaging"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>