<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vascular_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@drawable/rounded_toolbar"
    android:elevation="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3">

        <!-- Left-side button -->
        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_menu"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/menu_button" />

        <!-- Center logo -->
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/app_icon_with_title"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter" />

        <!-- Right-side button -->
        <ImageButton
            android:id="@+id/btn_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_user"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/user_button"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>

</androidx.appcompat.widget.Toolbar>